Release ...
* When a locale-dependent or font-specific character was used directly
  after a macro that ended with a font switch, it was chosen from the
  old font. This has been fixed.
* The ".hidechar" request now works correctly if the selected font is
  not the current font.

Release 051031
* The "-mpm" macros and the "pm" program have been added from Plan 9 source
  code. They form a "-ms"-like package for vertical justification; the file
  "mpm/README" explains some details.
* eqn: The generated troff program is now resolution-independent; the "-r"
  option is no longer needed and is ignored.
* dpost: The elements of overbars, brackets, and braces align better now, in
  particular in respect to documents distilled by Ghostscript.
* In the "man" macro package, ".B" and similar font change macros now accept
  more than six arguments.
* tbl: The maximum length for "w(...)" width specifications has been raised
  from 10 to 100.
* The "make install" procedures of refer and vgrind have been fixed to work
  with RPM and similar package builds.

Release 051025
* The "pic" and "grap" utilities have been added from Plan 9 sources.
* The "vgrind" utility has been added from OpenSolaris sources.
* "refer" and related utilites have been added from OpenSolaris sources.
* [nt]roff: The new ".recursionlimit" request allows to change the maximum
  permitted recursion depth for macro invocations from the default 512.

Release 051015
* troff, dpost, otfdump: Handle TrueType files with version 3.0 "post" table
  and no Microsoft/Unicode "cmap" subtable.
* otfdump: Kerning information was omitted for all but the first font when
  multiple font file arguments were given. This has been fixed.
* troff: Fonts that contain possible ligatures (fi, fl, etc.) in their file
  names are now mounted correctly.
* dpost: Allow only the glyph at position 0 to be named ".notdef" when
  generating Type 42 font data.
* dpost: No longer leaves a stale temporary file in /var/tmp.